--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
   margin-left: 3rem;
   width: 50%;
   border-radius: 50%;
+  cursor: pointer;
 }
+
+.DAH img:hover{
+  transform: rotate(360deg);
+  transition: 0.99s ease;
+}
+
     .Translator{
       display: flex;
       flex-direction: column;
@@ -161,13 +168,13 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 93px;
+                 height: 95px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4.5rem -10px rgba(91, 91, 91, 0.494);
-                 border-top: 0.13rem solid #0596fe;
+                 box-shadow: 0 -1px 4.5rem -10px rgba(81, 81, 81, 0.514);
+                 border-top: 0.25rem solid #00aafffa;
           }
           
 
@@ -186,7 +193,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 4px;
-  margin-top: -7px;
+  margin-top: -10px;
   
 }
 
@@ -1059,7 +1066,7 @@ function myFunction() {
 </div>
 
 <div class="navbar0"><p style="margin-left: 12.5rem;"> 
-  Bienvenue ! Site web en développement ! Bonne Visite !</p>
+  Bienvenue ! Site web en développement. Bonne Visite !</p>
 </div>
 <div class="fwrapper">
 
