--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -193,7 +194,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 4px;
-  margin-top: -10px;
+  margin-top: -8.5px;
   
 }
 
@@ -238,7 +239,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.45rem;
+            margin-top: 0.25rem;
           }
 
           .myDiv:hover{
@@ -260,7 +261,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.45rem;
+            margin-top: 0.25rem;
           }
 
           .myDiv1:hover{
@@ -281,7 +282,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.45rem;
+            margin-top: 0.25rem;
             }
 
           .myDiv2:hover{
@@ -302,7 +303,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.45rem;
+            margin-top: 0.25rem;
            }
 
           .myDiv3:hover{
@@ -323,7 +324,7 @@
             width: 100%;
             color: #676767e5;
             background: transparent;
-            margin-top: 0.45rem;
+            margin-top: 0.25rem;
             }
 
           .myDiv6:hover{
@@ -360,11 +361,11 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 360px;
+        height: 400px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
-        background: -webkit-linear-gradient(rgb(35, 35, 35), rgba(54, 54, 54, 0.914));
+        background: -webkit-linear-gradient(rgb(28, 28, 28), rgba(34, 34, 34, 0.914));
         background-size: cover;
         object-fit:cover;
         color: #fff;
@@ -883,13 +884,12 @@ animation: auto 12s infinite ease-in;
 
 .Ecole{
   display: grid;
-  grid-template-columns: 1.25fr 0.65fr;
-  column-gap: 0.25rem;
+  grid-template-columns: 1.36fr 0.64fr;
+  column-gap: 0.5rem;
   justify-content: center;
   justify-items: center;  
   width: 100%; 
   height: 30%;
-  
   padding: 0.5rem;
 }
 
@@ -1133,7 +1133,7 @@ function myFunction() {
       <div class="KRT">
                     <div>
                         <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Gabriel donne un des derniers cours avant de se réfugier au Canada pour des raisons sécuritaires
+                          Gabriel donne un de ses derniers cours avant de s'exiler au Canada pour des raison sécuritaire
                         </div>
 
                         <div class="k1-image">
@@ -1286,7 +1286,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immé
 <div class="K3">
 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Percussion djembé">
 <figure>
-<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left;">
+<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 13px; text-align: left;">
   Après les cours de soutien, la percussion est un moment préféré des enfants
 </figcaption>
 </figure>
@@ -1295,7 +1295,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immé
 <div class="K4">
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Percussion djembé">
 <figure>
-<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left;">
+<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 13px; text-align: left;">
   Soleil couchant de Laval
 </figcaption>
 </figure>
@@ -1383,7 +1383,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
   <div>
-    <p style="color:rgba(0, 0, 139, 0.717); font-size: 18px; font-family: Arial, Helvetica, sans-serif; text-align: justify;">
+    <p style="color:rgb(32, 95, 178); font-size: 19px; font-family: Arial, Helvetica, sans-serif; text-align: justify; line-height: 23px;">
       Sur la base de ces difficultés constituées de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre nommé Accadémie Tiki N'Yiki 
       Dans ce centre il y aura des salles de classe, des chambres adaptées, des salles de conditionnement sportif, des salles de réunion, des bureaux et des cuisines pour les enseignants et certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne. 
       
