--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -910,6 +911,39 @@ animation: auto 12s infinite ease-in;
   width: 100%;
   height: 50%;
 }
+
+.HLTHY{
+  display: grid;
+  grid-template-rows: 0.35fr 1.65fr;
+    background: #fff;
+    justify-items: center;
+    justify-content: center;
+    text-align: justify;
+    width: 73%;
+    height: 600px;
+    padding: 10px;
+}
+
+.Healthy{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 0.25rem;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+  height: 590px;
+  border-bottom: 0.12rem solid #2e2e2edb;
+}
+
+.STN1 img{
+  width: 100%;
+  height: 42%;
+}
+
+.STN2 img{
+  width: 100%;
+  height: 42%;
+}
 </style>
 
     <title>Tik-Yik.html</title>                              
@@ -1483,7 +1517,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green">C. Des activités d'éducation et de conscientisation</b> consistant à sensibiliser l'opinion publique sur le HANDICAP et l'inclusion et l'importance pour les personnes différentes qui sont avant tout des humains d'être inclues dans leurs communautés.
     <br>
     <br>
-    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> [Sélection d'un-e étudiant-e handicapé-e] comme bénéficiaire d'une bourse d'étude dénommée Bourse Tiki N'Yiki sur la base d'un certain nombre de critères dont l'excellence. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
+    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> [Sélection d'un-e étudiant-e handicapé-e] comme bénéficiaire d'une bourse d'étude dénommée Bourse Tiki N'Yiki basé sur des critères dont l'excellence et permettrait à la personne de s'inscrire dans une université de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
      </p>
 
     
@@ -1496,7 +1530,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
       </div>
 
-      <div class="k1">
+      <div class="HLTHY">
+        <div >
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
 
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
@@ -1511,13 +1546,30 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           Sur ce point très crucial, l'approche de Tiki N'Yiki sera de créer divers partenariats avec des hôpitaux, des médécins, des groupes, amicales d'agents soignant, d'infirmières qui accepteraient de donner de leurs temps et/ou de leur savoir-faire pour soigner des enfants handicapés qui manquent de couverture 
          médicale en cas de maladie.
         </p>
+      </div>
+        <div class="Healthy">
+
+        <div class="STN1">
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
             Centre hospitalier régional
             </figcaption>
     </figure>
+    </div>
+
+    <div class="STN2">
+    <img src="https://zupimages.net/up/22/30/5wsi.jpg" alt="Vaccination">
+    <figure>
+      <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
+        Vaccination
+        </figcaption>
+</figure>
+
         </div>
+
+      </div>
+    </div>
      
       <div class="k1">
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
