--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -473,7 +474,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: transparent;
+    background: rgba(248, 248, 248, 0.045);
     width: 88%;
     height: auto;
     font-family: 'helvetica';
@@ -704,7 +705,7 @@ animation: auto 12s infinite ease-in;
 
 .k1{
     display: grid;
-    background: #fff;
+    background: #ffffff12;
     justify-items: left;
     justify-content: center;
     text-align: justify;
@@ -770,7 +771,7 @@ animation: auto 12s infinite ease-in;
 
 .CRT1{
   display: grid;
-    background: #fff;
+  background: #ffffff12;
     justify-items: left;
     justify-content: center;
     text-align: justify;
@@ -920,19 +921,26 @@ animation: auto 12s infinite ease-in;
     justify-content: center;
     text-align: justify;
     width: 73%;
-    height: 600px;
+    height: 565px;
     padding: 10px;
+    font-family:  'arial'; 
+    font-size: 1.1rem; 
+    color: rgba(13, 13, 13, 0.866);
+    line-height: 25px;
 }
 
 .Healthy{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 0.25rem;
-  justify-content: center;
+  column-gap: 0.5rem;
+  justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 590px;
-  border-bottom: 0.12rem solid #2e2e2edb;
+  height: auto;
+  font-family:  'arial'; 
+  font-size: 1.1rem; 
+  color: rgba(13, 13, 13, 0.866);
+  line-height: 25px;
 }
 
 .STN1 img{
@@ -1552,17 +1560,17 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div class="STN1">
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
-          <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-            Centre hospitalier régional
+          <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+            Urgence du centre hospitalier régional de Ziniare
             </figcaption>
     </figure>
     </div>
 
     <div class="STN2">
-    <img src="https://zupimages.net/up/22/30/5wsi.jpg" alt="Vaccination">
+    <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
     <figure>
-      <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-        Vaccination
+      <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+        Urgence du CHUM de Montreal
         </figcaption>
 </figure>
 
