--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -913,6 +914,21 @@ animation: auto 12s infinite ease-in;
   height: 50%;
 }
 
+.DUQUE1{
+  display: grid; 
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  justify-items: center;
+  column-gap: 2rem;
+  width: 100%;
+  height: 650px;
+}
+.DUQUE1 img{
+width: 100%;
+height: 75%;
+}
+
 .HLTHY{
   display: grid;
   grid-template-rows: 0.35fr 1.65fr;
@@ -1499,6 +1515,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </div>
 
     <div class="k1">
+
+      <div class="DUQUE">
+
+      <div>
      <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
       <strong>
         1. Education
@@ -1527,16 +1547,49 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <br>
     <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> [Sélection d'un-e étudiant-e handicapé-e] comme bénéficiaire d'une bourse d'étude dénommée Bourse Tiki N'Yiki basé sur des critères dont l'excellence et permettrait à la personne de s'inscrire dans une université de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
      </p>
+    </div>
 
-    
-        <img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Enseignement au Burkina Faso">
+  <div class="DUQUE1">
+    <div>
+      <img src="https://www.zupimages.net/up/23/24/4p92.jpg" alt="Tableau noir">
+      <figure>
+      <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+        Apprentissage de l'alphabet avec la lettre M
+      </figcaption>
+</figure>
+
+    </div>
+    <div>
+      <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
+      <figure>
+      <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+        La lettre E et les accents tégu et grave
+      </figcaption>
+</figure>
+
+    </div>
+
+  <div>
+        <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
-        <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-        Enseigner les enfants pour améliorer leur éducation [<a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>]
+        <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+        Iniation de jeunes filles collégiennes à l'ordinateur au [<a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>]
     </figcaption>
 </figure>
 
       </div>
+
+    <div>
+      <img src="https://www.zupimages.net/up/23/24/z222.jpg" alt="Au tableau">
+        <figure>
+        <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+       Apprentissage de l'alphabet avec la lettre L
+    </figcaption>
+</figure>
+    </div>
+  </div>
+  </div>
+</div>
 
       <div class="HLTHY">
         <div >
