--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -917,16 +918,22 @@ animation: auto 12s infinite ease-in;
 .DUQUE1{
   display: grid; 
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  justify-content: center;
+  
+  justify-content: space-between;
   justify-items: center;
-  column-gap: 2rem;
+  column-gap: 0.5rem;
+
   width: 100%;
   height: 650px;
 }
 .DUQUE1 img{
 width: 100%;
 height: 75%;
+}
+
+.TXT{
+  width: 100%;
+  height: auto;
 }
 
 .HLTHY{
@@ -1518,7 +1525,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
       <div class="DUQUE">
 
-      <div>
+      <div class="TXT">
      <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
       <strong>
         1. Education
@@ -1563,7 +1570,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
       <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        La lettre E et les accents tégu et grave
+        Apprentissage de la lettre E avec les accents 
       </figcaption>
 </figure>
 
@@ -1573,7 +1580,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        Iniation de jeunes filles collégiennes à l'ordinateur au [<a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>]
+        Initiation de jeunes filles à l'ordinateur
     </figcaption>
 </figure>
 
