--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -725,6 +726,16 @@ animation: auto 12s infinite ease-in;
   height: 650px;
   background: #fff;
 }
+.DQ{
+  width: 73.5%;
+  height: 1100px;
+  font-family:  'arial'; 
+    font-size: 1.1rem; 
+    color: rgba(13, 13, 13, 0.866);
+    line-height: 25px;
+    padding: 10px;
+}
+
 .kptr{
   display: grid;
   grid-template-columns: 1.15fr 0.85fr;
@@ -924,11 +935,11 @@ animation: auto 12s infinite ease-in;
   column-gap: 0.5rem;
 
   width: 100%;
-  height: 650px;
+  height: 530px;
 }
 .DUQUE1 img{
 width: 100%;
-height: 75%;
+height: 50%;
 }
 
 .TXT{
@@ -1521,7 +1532,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   </div>
 </div>
 
-    <div class="k1">
+    <div class="DQ">
 
       <div class="DUQUE">
 
@@ -1557,15 +1568,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div class="DUQUE1">
-    <div>
-      <img src="https://www.zupimages.net/up/23/24/4p92.jpg" alt="Tableau noir">
-      <figure>
-      <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        Apprentissage de l'alphabet avec la lettre M
-      </figcaption>
-</figure>
-
-    </div>
+  
     <div>
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
@@ -1586,14 +1589,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
       </div>
 
-    <div>
-      <img src="https://www.zupimages.net/up/23/24/z222.jpg" alt="Au tableau">
-        <figure>
-        <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-       Apprentissage de l'alphabet avec la lettre L
-    </figcaption>
-</figure>
-    </div>
   </div>
   </div>
 </div>
