--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -366,7 +361,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 400px;
+        height: 425px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -728,7 +723,7 @@ animation: auto 12s infinite ease-in;
 }
 .DQ{
   width: 73.5%;
-  height: 1100px;
+  height: 1135px;
   font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -905,7 +900,7 @@ animation: auto 12s infinite ease-in;
   justify-items: center;  
   width: 100%; 
   height: 30%;
-  padding: 0.5rem;
+  padding: 20px;
 }
 
 .student{
@@ -917,7 +912,8 @@ animation: auto 12s infinite ease-in;
   width: 100%;
   height: 280px;
   background: transparent;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  
   
 }
 
@@ -929,12 +925,11 @@ animation: auto 12s infinite ease-in;
 .DUQUE1{
   display: grid; 
   grid-template-columns: 1fr 1fr;
-  
   justify-content: space-between;
   justify-items: center;
   column-gap: 0.5rem;
-
   width: 100%;
+  padding-top: 10px;
   height: 530px;
 }
 .DUQUE1 img{
@@ -956,7 +951,7 @@ height: 50%;
     text-align: justify;
     width: 73%;
     height: 565px;
-    padding: 10px;
+    padding-top: 10px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -975,6 +970,7 @@ height: 50%;
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
+  padding: 10px;
 }
 
 .STN1 img{
@@ -1731,37 +1727,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       
                       <br>La vision de Tiki N'Yiki a pour force motrice Gabriel dit Gaby, une personne handicapée physique ayant étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Gabriel a par la suite travaillé pour plusieurs associations et/ou organisations faîtières dans lesquelles il a pu enseigner des enfants handicapés, des enfants orphelins, animé des séances de sensibilisation sur le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il est un fervent défenseur des droits de personnes handicapées. Gabriel apprend à coder pour mieux développer ce site web statique en <a href="https://www.codecademy.com/learn/learn-html" target="_blank"> HTML</a> et <a href="https://www.codecademy.com/learn/learn-css?g_network=g&g_productchannel=&g_adid=640978473086&g_locinterest=&g_keyword=learn%20css&g_acctid=243-039-7011&g_adtype=&g_keywordid=kwd-295916433260&g_ifcreative=&g_campaign=account&g_locphysical=9000903&g_adgroupid=143797140665&g_productid=&g_source={sourceid}&g_merchantid=&g_placement=&g_partition=&g_campaignid=19230645493&g_ifproduct=&utm_id=t_kwd-295916433260:ag_143797140665:cp_19230645493:n_g:d_c&utm_source=google&utm_medium=paid-search&utm_term=learn%20css&utm_campaign=ESC_Language:_Basic_-_Exact&utm_content=640978473086&g_adtype=search&g_acctid=243-039-7011&gclid=EAIaIQobChMImIPLv6Sz_wIVbevjBx1MVgAoEAAYAiAAEgL9hfD_BwE" target="_blank">CSS</a> et présenter la vision de Tiki N'Yiki. 
+                      Gabriel a par la suite travaillé pour plusieurs associations et/ou organisations faîtières dans lesquelles il a pu enseigner des enfants handicapés, des enfants orphelins, animé des séances de sensibilisation sur le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Il est un fervent défenseur des droits de personnes handicapées. Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
                       Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture et de hockey sur glace. 
-                      <br>
-                      <br> 
-                      Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage avec autrui à leurs enfants. En plus ayant expérimenté une vie marquée très souvent de discriminations et d'exclusion sociale, Gabriel a bien sûr été impacté, inspiré et déterminé à faire quelque chose pour contribuer à améliorer les conditions de vie des personnes handicapées dont les enfants pour qu'ils soient mieux acceptés et bien intégrés dans leurs communautés.
-                      <br>
-                      <br>
-                En 2006 il a fondé, co-dirigé et animé l'association Paas Neere à Ziniare afin de participer à l'alpahbétisation des personnes handicapées adultes. 
-                <br>
-                <br>
-                En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour sa contribution à l'établissement du Centre Paas Neere à Ziniaré. 
-                <br>
-                <br>
-                En 2016 Gabriel a nourri l'idée du projet de Tiki N'Yiki. Quand il a partagé son idée avec son réseau d'ami-es dont certain-es vivent en <a href="https://ontheworldmap.com/usa/map-of-new-england-max.jpg" target="_blank">Nouvelle Angleterre [Massachusets, Maine, New Hampshire, Vermont] </a>, New York, Oregon, Washington State aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg"target="_blank"> Etats-Unis </a> et d'autres en Suisse et en France, une majorité a trouvé  l'idée très intéressante et importante pour la communauté. 
-                <br>
-                <br>
-                C'est ainsi que Gabriel a été invité pour un séjour de récolte de fonds (fundraising) pendant 3 mois aux <a href="https://as2.ftcdn.net/v2/jpg/01/79/14/47/1000_F_179144742_ci1Hr8CSh7WpCPYT1HL2A7v7PbjHcZh4.jpg" target="_blank"> Etats-Unis </a> à partir du 14 Juillet au 1er Octobre 2016. Ces levées de fonds étaient généralement organisées par des ami-es et se tenaient dans différents états Américains. Ce qui a aussi permis à Gabriel de découvrir la diversité des Etats-Unis en matière de culture et d'environnement de l'Est [Boston] à l'Ouest [Portland-Olympia]. 
-                <br>
-                <br>
-                L'argent récolté a pu financer des projets de Tiki N'Yiki tels que des fournitures scolaires, de vivres (riz) du transport et de la mobilité des enfants et étudiants handicapés en leur achetant des moyens de déplacement. Par ailleurs l'entretien et la reparation de tricyles usagés pour certains usagers handicapés en besoin est pris en charge financièrement. Aussi un soutien financier a été apporté aux enfants handicapés malades dont les familles ne pouvaient pratiquement pas prendre en charge les frais des ordonnances médicales. 
-                En rappel il n'y a pas de couverture sociale nationale pour les personnes handicapées qui ne sont pas des fonctionnaires de l'état du <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> Elles doivent se soigner à leurs frais quands elles tombent malades sinon elles décèdent.
-                <br>
-                <br>
-                Mais au délà de ces collectes sporadiques de fonds pour financier des projets saisonniers, l'idée fondamentale était de créer une fondation munie d'un appareil administratif bénévole et un comité exécutif pour mieux réaliser les projets. Faire émerger l'idée de projet en résultats concrêts, palpables, durables pour les personnes handicapées fait partie du focus de Tiki N'Yiki. 
-                <br>
-                <br>
-                En 2017 malheureusement et heureusement Gabriel était obligé de quitter le <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso </a> pour s'exiler au <a href="https://www.canada.ca/fr.html" target="_blank">Canada </a>pour des raisons de sécurité à cause de ses opinions politiques et du basculement du pays dans la violence extrême d'un terrorisme cruel et sanguinaire. Les activités de Tiki N'Yiki ont été beaucoup affectées par cette crise. Présentement Gabriel est un résident permanent Canadien et veut étudier en programmation informatique afin de pouvoir 
-                fonder un jour une accadémie  mixte d'informatique avec une priorité portée sur les étudiant-es handicapé-es.
-                <br>
-                <br>
-                  </p> 
+                    </p>      
       </div>
 
       <div class="kgp">
