--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -1001,11 +1000,9 @@ height: 50%;
 }
 .Avenue img{
   width: 100%;
-  height: auto;
+  height: 80%;
 }
-.spag img{
-  height: 81%;
-}
+
 .CC{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -1709,7 +1706,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
           <figcaption style=" color:#017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: -1px;">
-            Avenue d'Oubritenga - Ouagadougou - Burkina Faso
+            Avenue d'Oubritenga - Ouagadougou
             </figcaption>
     </figure>
     
@@ -1719,7 +1716,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
           <figcaption style=" color:#017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: -1px;">
-            Spagueti cuit
+            Spaghuetti cuit
             </figcaption>
     </figure>
     
