--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -931,7 +932,7 @@ animation: auto 12s infinite ease-in;
   column-gap: 0.5rem;
   width: 100%;
   padding-top: 10px;
-  height: 530px;
+  height: 500px;
 }
 .DUQUE1 img{
 width: 100%;
@@ -1011,12 +1012,23 @@ height: 50%;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 85%;
+  height: 80%;
 }
 .CC img{
   width: 100%;
-  height: 85%;
+  height: 80%;
 }
+
+.ORDI img{
+width: 100%;
+height: 52.23%;
+}
+
+.ORDI1 img{
+  width: 100%;
+  height: 52.23%;
+}
+
 </style>
 
     <title>Tik-Yik.html</title>                              
@@ -1600,7 +1612,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <div class="DUQUE1">
   
-    <div>
+    <div class="ORDI">
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
       <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1608,9 +1620,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figcaption>
 </figure>
 
-    </div>
+    </div >
     <a href="https://blogs.worldbank.org/fr/education/preparer-les-filles-pour-lavenir-de-lafrique-approches-de-lautonomisation-par-les" target="_blank">
-  <div>
+  <div clas="ORDI1">
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
