--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -1029,6 +1030,7 @@ height: 52.23%;
   height: 52.23%;
 }
 
+
 </style>
 
     <title>Tik-Yik.html</title>                              
@@ -1382,7 +1384,7 @@ function myFunction() {
 
         <div class="k1">
 
-          <div class="K" style="display: grid; grid-template-rows: 0.25fr 1.75fr;">
+          <div class="K" style="display: grid; grid-template-rows: 0.25fr 1.25fr;">
 
           <div class="KT">
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais en jouissant de leurs droits
@@ -1423,7 +1425,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immé
 </div>
 </div>
 
-<div class="k1" style="margin-top: -11.2rem">
+<div class="k1">
     <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
 
 <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
