--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -1544,13 +1545,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <br>
       </p> 
         <b>
-     <a href="https://www.education.gov.bf/accueil"  target="blank">1. L'éducation</a>
+     <a href="https://www.education.gov.bf/accueil" style="color: red;" target="blank">1. L'éducation</a>
          <br>
-     <a href="https://www.sante.gov.bf/accueil" target="blank">2. La santé et les soins</a>
+     <a href="https://www.sante.gov.bf/accueil" style="color: red;" target="blank">2. La santé et les soins</a>
          <br>
-     <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" target="blank">3. La sécurité alimentaire</a>
+     <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" style="color: red;" target="blank">3. La sécurité alimentaire</a>
          <br>
-     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" target="blank">4. Le changement climatique</a> 
+     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" style="color: red;" target="blank">4. Le changement climatique</a> 
      </b>
     </div>
 
