--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -1359,7 +1360,7 @@ function myFunction() {
             <div>
             <img src="https://previews.123rf.com/images/michal812/michal8121306/michal812130600184/20531769-burkina-faso-on-actual-vintage-political-map-of-africa-with-flags.jpg" alt="Africa">
             <figure>
-              <figcaption style=" margin-top: 0.1rem; color: #055ce8; font-family: 'verdana'; font-size: 12px; text-align: left;">
+              <figcaption style=" margin-top: 0.1rem; color: #017ffe; font-family: 'verdana'; font-size: 12px; text-align: left;">
                 Carte du Burkina Faso en Afrique 
               </figcaption>
               </figure>
@@ -1370,7 +1371,7 @@ function myFunction() {
           <div>
          <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
          <figure>
-          <figcaption style=" margin-top: 0.1rem; color: #055ce8; font-family: 'verdana'; font-size: 12px; text-align: left;">
+          <figcaption style=" margin-top: 0.1rem; color: #017ffe; font-family: 'verdana'; font-size: 12px; text-align: left;">
             Carte du Burkina Faso avec les pays frontaliers et sa capitale OUAGADOUGOU
           </figcaption>
           </figure>
@@ -1406,7 +1407,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immé
 <div class="K3">
 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Percussion djembé">
 <figure>
-<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 13px; text-align: left;">
+<figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 13px; text-align: left;">
   Après les cours de soutien, la percussion est un moment préféré des enfants
 </figcaption>
 </figure>
@@ -1415,7 +1416,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités dans un futur très immé
 <div class="K4">
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Percussion djembé">
 <figure>
-<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 13px; text-align: left;">
+<figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 13px; text-align: left;">
   Soleil couchant de Laval
 </figcaption>
 </figure>
@@ -1496,7 +1497,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div>
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
         <figure>
-            <figcaption style="font-family: 'arial black'; font-size: 12px; color: rgba(0, 0, 139, 0.52); margin-top: -1rem;">
+            <figcaption style="font-family: 'arial black'; font-size: 12px; color: #017ffe; margin-top: -1rem;">
               Un modèle de l'Accadémie Tiki N'Yiki. Le logo sera au haut du drapeau
             </figcaption>
           </figure>
@@ -1557,7 +1558,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div>
     <img src="https://icons.iconarchive.com/icons/icons8/ios7/512/Science-Classroom-icon.png" alt="reader icon">
   <figure>
-    <figcation style="color:rgba(6, 110, 247, 0.97); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
+    <figcation style="color:#017ffe; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
       Enseignant et étudiants en cours
       <figcation>
 </figure>
@@ -1567,7 +1568,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div>
   <img src="https://static.vecteezy.com/system/resources/thumbnails/002/165/413/small/line-icon-for-student-vector.jpg">
   <figure>
-    <figcation style="color:rgba(6, 110, 247, 0.97); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
+    <figcation style="color:#017ffe; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 17px; margin-top: -1rem;">
       L'éducation est un droit fondamental
       <figcation>
 </figure>
@@ -1616,7 +1617,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <div class="ORDI">
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
-      <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+      <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
         Apprentissage de la lettre E avec les accents 
       </figcaption>
 </figure>
@@ -1626,7 +1627,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <div clas="ORDI1">
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
-        <figcaption style=" color: #0062ff; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+        <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
         Initiation de jeunes filles à l'ordinateur
     </figcaption>
 </figure>
@@ -1660,7 +1661,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div class="STN1">
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
-          <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+          <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
             Urgence du centre hospitalier régional de Ziniare
             </figcaption>
     </figure>
@@ -1669,7 +1670,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <div class="STN2">
     <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
     <figure>
-      <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
+      <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
         Urgence du CHUM de Montreal
         </figcaption>
 </figure>
@@ -1731,7 +1732,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
           <figcaption style=" color:#017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: -1px;">
-            Spaghuetti cuit
+            Un plat de spaguetti 
             </figcaption>
     </figure>
     
@@ -1778,7 +1779,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
       <div> 
         <img src="https://www.zupimages.net/up/23/24/o4k8.jpg" alt="Sensibiliser par rapport aux changements climatiques">
-        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: #055ce8">
+        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: #017ffe">
           Sensibiliser par rapport aux changements climatiques
       </figcaption> 
   </figure>
@@ -1787,7 +1788,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div>
            <img src="https://www.zupimages.net/up/22/29/epkw.jpg" alt="Nettoyage de sacs plastiques">
            <figure>
-        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: #055ce8">
+        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: #017ffe">
             Nettoyage de sacs plastiques à Ziniare
         </figcaption> 
     </figure>
