--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
@@ -500,7 +501,6 @@ hr{
  text-align: left; 
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
- 
  border: 0.11rem solid rgba(197, 197, 197, 0.744);
 }
 
@@ -941,6 +941,13 @@ height: 50%;
 .TXT{
   width: 100%;
   height: auto;
+  height: auto;
+    font-family:  'arial'; 
+    font-size: 1.1rem; 
+    color: rgba(13, 13, 13, 0.866);
+    line-height: 25px;
+    padding: 10px;
+    text-align: justify;
 }
 
 .HLTHY{
