--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ animation: auto 12s infinite ease-in;
 }
 .DQ{
   width: 73.5%;
-  height: 1085px;
+  height: 1090px;
   font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -921,7 +921,9 @@ animation: auto 12s infinite ease-in;
   height: 50%;
 }
 
-
+.DUQUE{
+  height: 450px;
+}
 .DUQUE1{
   display: grid; 
   grid-template-columns: 1fr 1fr;
