--- a/index.html
+++ b/index.html
@@ -1323,9 +1323,9 @@ function myFunction() {
               Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Mossi_(peuple)" target="blank">[<b>Tiki et N'Yiki</b>] </a> du Mooré, une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso en Afrique de l'Ouest</a>:           
               <br>
               <br>
-              <b style="color:#ff0a06">a. Tiki</b> signifie <b>Appuies-toi</b>
+              <b style="color:#ff0a06">a. Tiki</b> signifie <b>Appuie-toi</b>
               <br>
-              <b style="color:#ff0a06">b. N'Yiki</b> signifie <b>Lèves-toi</b>. 
+              <b style="color:#ff0a06">b. N'Yiki</b> signifie <b>Lève-toi</b>. 
           
           </p>
         
